# Gstreamer

./: README.md
gst-plugins-bad-1.16.0/: Makefile.in  configure
gst-plugins-bad-1.16.0/common/: Makefile.in
gst-plugins-bad-1.16.0/docs/: Makefile.in
gst-plugins-bad-1.16.0/ext/: Makefile.in
gst-plugins-bad-1.16.0/gst/: Makefile.in
gst-plugins-bad-1.16.0/gst-libs/: Makefile.in
gst-plugins-bad-1.16.0/m4/: Makefile.in
gst-plugins-bad-1.16.0/pkgconfig/: Makefile.in
gst-plugins-bad-1.16.0/po/: af.po  ast.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  fur.po  gl.po  gst-plugins-bad-1.0.pot  hr.po  hu.po  id.po  it.po  ja.po  ky.po  lt.po  lv.po  mt.po  nb.po  nl.po  or.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sq.po  sr.po  sv.po  tr.po  (+3 more)
gst-plugins-bad-1.16.0/sys/: Makefile.in
gst-plugins-bad-1.16.0/tests/: Makefile.in
gst-plugins-bad-1.16.0/tools/: Makefile.in
gst-plugins-base-1.16.0/: configure
gst-plugins-base-1.16.0/po/: af.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  fur.po  gl.po  gst-plugins-base-1.0.pot  hr.po  hu.po  id.po  it.po  ja.po  lt.po  lv.po  nb.po  nl.po  or.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sq.po  sr.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po
gst-plugins-base-1.16.0/subprojects/gl-headers/: meson.build
gst-plugins-good-1.16.0/: configure
gst-plugins-good-1.16.0/po/: af.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  fur.po  gl.po  gst-plugins-good-1.0.pot  hr.po  hu.po  id.po  (+24 more)
gst-plugins-ugly-1.16.0/: Makefile.in  aclocal.m4  config.h.in  configure
(+257 files in other folders)
